Add github link to footer

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
            style="height: 6vh; float: left">
     </div>
     <footer>
+      <a href="https://github.com/dinhkellie/Bored-in-the-BiCo">
       <img src="https://cdn.glitch.com/05141f73-c13e-4178-b0aa-6ade731e2832%2FBored%20at%20the%20bico%20logo%20(1).png?1490487366148"
            style="height: 10vh; float: right">
+      </a>
     </footer>
     <script src="/client.js"></script>
   </body>
