--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body class="vertical parent" style="font-family: 'Caveat Brush', cursive;">
     
     <div class="logo child">
+      <img src="https://cdn.glitch.com/05141f73-c13e-4178-b0aa-6ade731e2832%2FBored%20At%20The%20BiCo.png?1490469836711">
     </div>
     <div class="result child">
       <h4>
@@ -22,25 +23,25 @@
     <div id="wheel-result">
       <div class="button-container">
         <div class="button child">
-          <h2>
-            wheel
-          </h2>
+          <img src="https://cdn.glitch.com/05141f73-c13e-4178-b0aa-6ade731e2832%2Fwheel%202.png?1490488308471">
         </div>
       </div>
     </div>
   
     <div class="footer-names">
       <img src="https://cdn.glitch.com/05141f73-c13e-4178-b0aa-6ade731e2832%2FTech%20By.png?1490487361193"
-           style="height: 5vh; float: left">
+           style="height: 40%; float: left; margin: 0">
       <br>
       <br>
-      <img src="https://cdn.glitch.com/05141f73-c13e-4178-b0aa-6ade731e2832%2FArtboard%201.png?1490487363930"
-           style="height: 6vh; float: left">
+      <a href="https://kristalsotomayor.com">
+        <img src="https://cdn.glitch.com/05141f73-c13e-4178-b0aa-6ade731e2832%2FArtboard%201.png?1490487363930"
+             style="height: 50%; float: left; margin: 0">
+      </a>
     </div>
     <footer>
       <a href="https://github.com/dinhkellie/Bored-in-the-BiCo">
       <img src="https://cdn.glitch.com/05141f73-c13e-4178-b0aa-6ade731e2832%2FBored%20at%20the%20bico%20logo%20(1).png?1490487366148"
-           style="height: 10vh; float: right">
+           style="height: 10vh; float: right; margin: 0">
       </a>
     </footer>
     <script src="/client.js"></script>
